# ScaleRunner

./: CMakeLists.txt  Config.cmake.in  README.md
demo/: demo.cpp
include/scalerunner/: first_order_rw.h  graph.h  mpi_utils.h  node2vec.h  random_walk.h  rw_scheduler.h  second_order_rw.h  utils.h
src/: mpi_utils.cpp
test/: 1st_order_rw_test.cpp  2nd_order_rw_test.cpp  graph.h  graph_reading_test.cpp  mockup.h  mockup_test.cpp  mpi_test.cpp  mpi_test_main.cpp  node2vec_unweighted_test.cpp  node2vec_weighted_test.cpp  rw_consecutive_paths_test.cpp  rw_scheduler_test.cpp  simple_rw_test.cpp  utils_test.cpp  weighted_rw_test.cpp
test/graphs/: README.md  hu-webgraph.edges
